--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,9 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
+
 /* navigation links */
 
 #menu {
@@ -56,7 +58,7 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* hero image */
+/* hero image and cover text */
 
 #hero-outer {
     height: 600px;
@@ -114,3 +116,28 @@ h1, h2 {
 
 }
  
+/* club ethos */
+
+#club-ethos {
+    height: 600px;
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    color: blue;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    color: silver;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    color: green;
+}
