--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ h1, h2 {
 hr {
     border-top: 1px solid #3a3a3a;
     width: 100%;
-    margin: 5px;
+    margin: 5px 0;
 }
 
 .left-about-heading {
@@ -161,16 +161,18 @@ hr {
     margin-bottom: 50px;
 }
 
-.right-about-heading h2 {
-    text-align: right;
-}
 .right-about-heading p {
     text-align: right;
 }
+.right-about-heading h2 {
+    text-align: right;
+}
+
+/* club ethos center image */
 
 #welcome {
-    text-align: center;
     margin: 20px 0;
+    text-align: center;
     font-size: 280%;
 }
 
